Product Page 90% (4/6) - Support.html and About.html left

--- a/products.html
+++ b/products.html
@@ -65,8 +65,148 @@
     <!-- CONTENT GOES HERE -->
     <div class="jumbotron" style="margin-bottom: 0;">
         <h1 class="text-center">Products</h1>
-     </div>
-
+    </div>
+     
+    <div class="container">
+      <div class="spacer"></div>
+      <div class="row">
+        <div class="col-md-3">
+          <h3>Specifics</h3>
+          <ul style="padding-left: 0; list-style: none; text-align: left">
+            <li>WJ1004B</li>
+            <li>WJJB350</li>
+            <li>WJ200-300</li>
+            <li>WJFT350A</li>
+            <li>WJFT350B</li>
+            <li>WJFT350C</li>
+            <li>WJMQ200</li>
+            <li>WJ350S</li>
+            <li>WJBQ4230</li>
+            <li>WJ350S</li>
+            <li>WJRS350</li>
+            <li>WJ350</li>
+          </ul>
+        </div>
+        <div class="col-md-9">
+          <h3 class="text-center">Our Selection</h3>
+          <div class="row">
+            <div class="col-md-4 text-center padder">
+              <img src="img/products/Wanjie WJ1004B High Speed Rotary Ribbon Label Presses 285x210mm-80.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJ1004B Ribbon Label Presser</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+            <div class="col-md-4 text-center padder">
+              <img src="img/products/Wanjie WJJB350 Label-Detecting Machine 285x210mm-78.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJJB350 Label-Detector</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+            <div class="col-md-4 text-center padder">
+              <img src="img/products/wanjie WJ200-300 Exposing Unit 285x210mm-77.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJ200300 Exposing Unit</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+            <div class="col-md-4 text-center padder">
+              <img src="img/products/Wanjie WJFT-350A Label Slitting Machine 285x210mm-73.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJFT350A Label Splitter</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+            <div class="col-md-4 text-center padder">
+              <img src="img/products/WJ1004B Computer Cutting Label Machine 285x210mm-79.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJ1004B Computer Cutting Labeler</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+            <div class="col-md-4 text-center padder">
+              <img src="img/products/Wanjie WJFT-350C Label Slitting Machine 285x210mm-74.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJ200-300 Exposing Unit</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+            <div class="col-md-4 text-center padder">
+              <img src="img/products/wanjie WJMQ-200 Standard Label Die Cutter One Station 285x210mm-70.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJMQ200 Standard Label Die Cutter</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+            <div class="col-md-4 text-center padder">
+              <img src="img/products/wanjie WJ350S Hot air drier 285x210mm-67.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJ350S Hot Air Drying Machine</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+            <div class="col-md-4 text-center padder">
+              <img src="img/products/Wanjie WJBQ4230 ect UV Drier 285x210mm-64.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJBQ4230 ECT UV Drier</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+            <div class="col-md-4 text-center padder">
+              <img src="img/products/Wanjie WJRS-350 Automatic Coating Machine 285x210mm-76.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJRS350 Automatic Coating Machine</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+            <div class="col-md-4 text-center padder">
+              <img src="img/products/wanjie WJ350S one color core machine 285x210mm-66.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJ350S One Color Core Machine</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+            <div class="col-md-4 text-center padder">
+              <img src="img/products/wanjie WJBQ Auto Rewinder 285x210mm-63.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJBQ Auto Rewinding Machine</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 text-center padder">
+              <img src="img/products/Intermittent Rotary Label Die-Cutting Machine WJJM350 285x210mm-61.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJJM350 Rotary Label Die-Cutter</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+            <div class="col-md-6 text-center padder">
+              <img src="img/products/wanjie WJMQ-350A Automatic Label Die-cutting Machine 285x210mm-72.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJMQ350A Automatic Label Die Cutter</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+            <div class="col-md-6 text-center padder">
+              <img src="img/products/Wanjie WJMQ-350-450 Sticker And Cardboard Dual Purpose Die-cutting Machine 285x210mm-71.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJMQ350-450 Sticker &amp; Cardboard Die Cutter</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+            <div class="col-md-6 text-center padder">
+              <img src="img/products/Wanjie WJMQ-350B High-speed Die-cutting Machine 285x210mm-68.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJMQ350B High Speed Die Cutter</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <img src="img/products/wanjie Double Station Silk Screen Printing Machine285x210mm-65.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJ Double Station Silk Screen Printer</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+            <div class="col-md-12 text-center">
+              <img src="img/products/Wanjie WJMQ-350 Double-Station Label Die-cutting Machine 285x210mm-69.jpg" height="200px">
+              <div class="spacer-s"></div>
+              <p>WJMQ350 Double-Station Label Die Cutter</p>
+              <a href="#"><p class="button-link">More Details</p></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="spacer"></div>
     <footer>
       <div class="row" style="display: flex; justify-content: center; align-items: center;">
         <div class="col">
